[package]
name = "pallet-ntnft"
version = "4.0.0-dev"
description = "NT-NFT pallet for defining custom runtime logic."
authors = ["Popular Coding <https://github.com/popular-coding>"]
homepage = "https://www.popularcoding.com/"
edition = "2021"
license = "GPLv3"
publish = false
repository = "https://github.com/Popular-Coding/ventur"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

[dev-dependencies]
hex-literal = "0.3.4"
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-balances/std",
    "pallet-timestamp/std",
	"sp-runtime/std",
    "sp-std/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
